k8s/service/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: nagpdemo
spec:
  type: ClusterIP
  selector:
    app: api-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
